--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.12",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
+    "openai": "^4.97.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
